<resources>
    <string name="app_name">Weather App</string>

    <string name="degree">%1$d°</string>
    <string name="kmh">%1$d km/h</string>
    <string name="mbar">%1$d mbar</string>
    <string name="feels_like">Feels like: %1$d°</string>
    <string name="updated_at">updated %1$s</string>
    <string name="app_version">Version %1$s</string>

    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="undefined_day">Undefined day</string>
    <string name="today">Today</string>

    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="manage_locations">Manage locations</string>
    <string name="add_location">Add location</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="nothing_found">Nothing found</string>

    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="uv_index">UV-index</string>

    <string name="air_quality">Air quality (μg/m3)</string>
    <string name="epa_index">EPA Index</string>
    <string name="sulphur_dioxide">Sulphur dioxide (so2)</string>
    <string name="nitrogen_dioxide">Nitrogen dioxide (no2)</string>
    <string name="ozone">Ozone (o3)</string>
    <string name="carbon_monoxide">Carbon Monoxide (co)</string>

    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="extreme">Extreme</string>
    <string name="undefined">Undefined</string>

    <string name="good">Good</string>
    <string name="unhealthy_for_sensitive_group">Unhealthy for sensitive group</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="very_unhealthy">Very Unhealthy</string>
    <string name="hazardous">Hazardous</string>

    <string name="powered_by_weatherapi">Powered by WeatherAPI.com</string>

    <string name="unit">Unit</string>
    <string name="use_current_location">Use current location</string>
    <string name="agree">Agree</string>
    <string name="about_the_app">About the app</string>

    <string name="settings_menu_item_c">°C</string>
    <string name="settings_menu_item_f">°F</string>

    <string name="undefined_fail">Something went wrong\nTry to update</string>
    <string name="network_fail">Failed to get new data\nCheck your internet connection</string>
    <string name="db_fail">Failed to get local data\nTry to update</string>
    <string name="no_selected_location">No selected location</string>
    <string name="no_added_locations">No added locations</string>
    <string name="show_last_saved_data">Show last saved data</string>

    <string name="location_alredy_added">Location already added</string>

    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
</resources>