<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/formContentBlock">

    <TextView
        android:id="@+id/air_quality_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_quality"
        android:textSize="@dimen/small_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/co"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/carbon_monoxide"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air_quality_index" />

    <TextView
        android:id="@+id/co_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/air_quality_index" />

    <TextView
        android:id="@+id/o3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/ozone"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="@+id/co"
        app:layout_constraintTop_toBottomOf="@+id/co" />

    <TextView
        android:id="@+id/o3_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="@+id/co_value"
        app:layout_constraintTop_toBottomOf="@+id/co_value" />

    <TextView
        android:id="@+id/no2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/nitrogen_dioxide"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="@+id/o3"
        app:layout_constraintTop_toBottomOf="@+id/o3" />

    <TextView
        android:id="@+id/no2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="@+id/o3_value"
        app:layout_constraintTop_toBottomOf="@+id/o3_value" />

    <TextView
        android:id="@+id/so2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/sulphur_dioxide"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="@+id/no2"
        app:layout_constraintTop_toBottomOf="@+id/no2" />

    <TextView
        android:id="@+id/so2_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="@+id/no2_value"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintTop_toBottomOf="@+id/no2_value" />

    <TextView
        android:id="@+id/us_epa_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/epa_index"
        android:textStyle="bold"
        android:textSize="@dimen/small_text"
        app:layout_constraintStart_toStartOf="@+id/so2"
        app:layout_constraintTop_toBottomOf="@+id/so2" />

    <TextView
        android:id="@+id/us_epa_index_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="@+id/so2_value"
        app:layout_constraintTop_toBottomOf="@+id/so2_value" />

</androidx.constraintlayout.widget.ConstraintLayout>